Seguir completando layout y estilo visual

--- a/index.html
+++ b/index.html
@@ -11,19 +11,31 @@
     <header>
       <nav class="nav-primaria">
         <div class="nav-primaria__secciones">
-          <a href="#"><img src="" alt="Logo de Behance" /></a>
+          <a href="#"
+            ><img
+              src="img/logo-behance.png"
+              alt="Logo de Behance"
+              class="logo-behance"
+          /></a>
           <a href="#">Descubrir</a>
           <a href="#">Transmisiones en directo</a>
           <a href="#">Contratar</a>
           <a href="#"><img src="" alt="" />Vacantes</a>
         </div>
         <form action="">
-          <input type="text" placeholder="Buscar…" />
+          <input type="text" placeholder="Buscar…" class="btn" />
         </form>
+
         <div class="nav-primaria__login">
-          <a href="#">Iniciar sesión</a>
-          <a href="">Registrarse</a>
-          <a href="#"><img src="" alt="Logo de Adobe" /></a>
+          <a href="" class="btn btn--primario">Registrarse</a>
+          <a href="#" class="btn">Iniciar sesión</a>
+          <a href="#">
+            <img
+              src="img/logo-adobe.png"
+              alt="Logo de Adobe"
+              class="logo-adobe"
+            />
+          </a>
         </div>
       </nav>
     </header>
@@ -41,8 +53,8 @@
         </a>
         <p>Tokyo, Japan</p>
 
-        <a href="">Seguir</a>
-        <a href="">Mensaje</a>
+        <a href="#" class="btn btn--primario">Seguir</a>
+        <a href="#" class="btn btn--secundario">Mensaje</a>
       </div>
       <ul class="perfil__stats">
         <li>
@@ -74,9 +86,9 @@
     </aside>
     <main>
       <nav class="nav-secundaria">
-        <a href="">Trabajo</a>
-        <a href="">Paneles de tendencias</a>
-        <a href="">Valoraciones</a>
+        <a href="#" class="btn btn--seleccionado">Trabajo</a>
+        <a href="#" class="btn">Paneles de tendencias</a>
+        <a href="#" class="btn">Valoraciones</a>
       </nav>
       <ul>
         <li>
@@ -176,7 +188,9 @@
           <a href="#">Comunidad</a>
           <a href="#">Ayuda</a><a href="#">Preferencias sobre cookies</a>
         </div>
-        <a href=""><img src="#" alt="Logo Adobe" /></a>
+        <a href="">
+          <img src="img/logo-adobe.png" alt="Logo Adobe" class="logo-adobe"
+        /></a>
       </nav>
     </footer>
   </body>
